# api/docs/swagger.json
@@ -106,7 +106,7 @@
             }
         },
         "/directory-contents": {
-            "post": {
+            "get": {
                 "description": "Get contents of a directory",
                 "consumes": [
                     "application/json"
@@ -120,13 +120,11 @@
                 "summary": "Directory Contents",
                 "parameters": [
                     {
-                        "description": "Body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handlers.GetDirectoryContentsRequest"
-                        }
+                        "type": "string",
+                        "description": "Path",
+                        "name": "path",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -137,6 +135,31 @@
                         }
                     }
                 }
+            }
+        },
+        "/download-file": {
+            "get": {
+                "description": "Download a file",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "homeshare"
+                ],
+                "summary": "Download File",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Path",
+                        "name": "path",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
             }
         },
         "/login": {
@@ -285,14 +308,6 @@
                 },
                 "size": {
                     "type": "integer"
-                }
-            }
-        },
-        "handlers.GetDirectoryContentsRequest": {
-            "type": "object",
-            "properties": {
-                "path": {
-                    "type": "string"
                 }
             }
         },
